# dev-ops-ai-agent

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: agent-rule.mdc  python-rule.mdc
src/ai_agent/: __init__.py  agent.py  config.py  main.py
src/ai_agent/examples/: __init__.py  logger_usage.py
src/ai_agent/models/: __init__.py
src/ai_agent/services/: __init__.py
src/ai_agent/tools/: tool_handle_non_application_log.py  tool_open_sre_ticket.py  tool_restart_service.py  tool_send_slack_alert.py
src/ai_agent/utils/: __init__.py  logger.py  secrets.py  tool.py  tool_decorator.py
src/lambda_log_collector/: lambda_function.py
src/lambda_log_generator/: lambda_function.py
tests/: __init__.py
tests/test_models/: __init__.py
tests/test_services/: __init__.py
